refact: ask to publish prize endpoint
