# app/Http/Responses/AskToPublishPrizeResponse.php
@@ -6,8 +6,18 @@ namespace App\Http\Responses;
 
 use App\Domain\Prize\Prize;
 
+/** @OA\Schema(title="Ask to Publish Prize to be Review by Staff Team") */
 class AskToPublishPrizeResponse
 {
+    /** @OA\Property(property="id", example="1") */
+    /** @OA\Property(property="name", example="Ticket") */
+    /** @OA\Property(property="category", example="FIRST") */
+    /** @OA\Property(property="description", type="string", example="Show tickets for the first in monthly rank") */
+    /** @OA\Property(property="status", example="PENDING") */
+    /** @OA\Property(property="artist_id", example="1")  */
+    /** @OA\Property(property="created_at", example="2020-09-20T17:49:42.000000Z") */
+    /** @OA\Property(property="updated_at", example="2020-09-20T17:49:42.000000Z") */
+
     public static function convertToJson(Prize $prize): array
     {
         return [
@@ -16,10 +26,7 @@ class AskToPublishPrizeResponse
             "category" => $prize->category,
             "description" => $prize->description,
             "status" => $prize->status,
-            "artist" => [
-                "id" => $prize->getArtist()->id,
-                "name" => $prize->getArtist()->name,
-            ],
+            "artist_id" => $prize->artist->id,
             "created_at" => $prize->created_at->toDateTimeString(),
             "updated_at" => $prize->updated_at->toDateTimeString(),
         ];
